scss colors and mixin

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             <li class="servis__item">
               <div class="servis__wrapper">
                 <div class="servis__wrapper__info">
-                  <img src="./images/Oval1.svg" alt="colton" />
+                  <img src="./images/Oval2.svg" alt="colton" />
                   <div class="servis__wrapper__title">
-                    <p class="servis__wrapper__title__desc">Colton Smith</p>
+                    <p class="servis__wrapper__title__desc">Irene Roberts</p>
                     <p class="servis__wrapper__title__text">Verified Buyer</p>
                   </div>
                 </div>
@@ -85,9 +85,9 @@
             <li class="servis__item">
               <div class="servis__wrapper">
                 <div class="servis__wrapper__info">
-                  <img src="./images/Oval1.svg" alt="colton" />
+                  <img src="./images/Oval3.svg" alt="colton" />
                   <div class="servis__wrapper__title">
-                    <p class="servis__wrapper__title__desc">Colton Smith</p>
+                    <p class="servis__wrapper__title__desc">Anne Wallace</p>
                     <p class="servis__wrapper__title__text">Verified Buyer</p>
                   </div>
                 </div>
